; ModuleID = '/home/carl/AnghaBench/curl/tests/server/extr_tftpd.c_rw_init.c'
source_filename = "/home/carl/AnghaBench/curl/tests/server/extr_tftpd.c_rw_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__, i32 }
%struct.TYPE_3__ = type { %struct.tftphdr }
%struct.tftphdr = type { i32 }

@newline = common dso_local global i64 0, align 8
@prevchar = common dso_local global i32 0, align 4
@BF_ALLOC = common dso_local global i32 0, align 4
@bfs = common dso_local global %struct.TYPE_4__* null, align 8
@current = common dso_local global i64 0, align 8
@BF_FREE = common dso_local global i32 0, align 4
@nextone = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.tftphdr* (i32)* @rw_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.tftphdr* @rw_init(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i64 0, i64* @newline, align 8
  store i32 -1, i32* @prevchar, align 4
  %3 = load i32, i32* @BF_ALLOC, align 4
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** @bfs, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i64 0
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 1
  store i32 %3, i32* %6, align 4
  store i64 0, i64* @current, align 8
  %7 = load i32, i32* @BF_FREE, align 4
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** @bfs, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i64 1
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 1
  store i32 %7, i32* %10, align 4
  %11 = load i32, i32* %2, align 4
  store i32 %11, i32* @nextone, align 4
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** @bfs, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i64 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  ret %struct.tftphdr* %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
